fix night-audit z-index

--- a/apps/admin/src/assets/sass/abstracts/_constants.scss
+++ b/apps/admin/src/assets/sass/abstracts/_constants.scss
@@ -1,5 +1,5 @@
 // ** z-indexes ** [Should not be above 999]
-$night-audit-info-z: 730;
+$night-audit-info-z: 121;
 $left-side-panel-upper-z: 640;
 $left-side-panel-lower-z: 620;
 $right-side-panel-z: 620;
@@ -12,8 +12,8 @@ $form-action-z: 121;
 $progress-bar-z: 480;
 $nav-action-sub-header: 110;
 $main-menu-z: 400;
-$nav-header-z: 140;
-$sidebar-z: 150;
+$nav-header-z: 120;
+$sidebar-z: 150; //for all the sidebar
 // Breakpoint variables
 
 $S: 480px;
